plugins {
    id 'org.springframework.boot' version '2.1.9.RELEASE'
    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
    id 'java'
    id 'jacoco'
}

apply from: './code-quality.gradle'

group = 'pl.wedel'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = 11
targetCompatibility = 11

configurations {
    developmentOnly
    runtimeClasspath {
        extendsFrom developmentOnly
    }
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
    compile 'org.springframework.boot:spring-boot-starter-jdbc'
    compile group: 'net.sf.jasperreports', name: 'jasperreports-fonts', version: '6.10.0'
    compile 'org.springframework.boot:spring-boot-starter-security'
    compile group: 'net.sf.jasperreports', name: 'jasperreports', version: '6.10.0'
    compile group: 'com.lowagie', name: 'itext', version: '2.1.7'
    implementation 'com.opencsv:opencsv:4.5'
    compile 'org.springframework.boot:spring-boot-starter-web'
    compile 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testCompile 'org.springframework.boot:spring-boot-starter-data-jpa'
    testCompile 'org.springframework.security:spring-security-test'
    testCompile 'org.springframework.boot:spring-boot-starter-test'
    testCompile 'org.junit.jupiter:junit-jupiter:5.4.0'
}

jacoco {
    toolVersion = "0.8.4"
    reportsDir = file("$buildDir/customJacocoReportDir")
}

jacocoTestReport {
    reports {
        xml.enabled false
        csv.enabled false
        html.destination file("${buildDir}/jacocoHtml")
    }
}

test {
    useJUnitPlatform()
}

build {
    dependsOn jacocoTestReport
    dependsOn check
}